<resources>
    <string name="app_name">Com qual combustível?</string>
    <string name="uma_bomba_de_gasolina_ilustrando_o_app">uma bomba de gasolina ilustrando o app</string>
    <string name="gasolina_ou_lcool">Gasolina ou Álcool?</string>
    <string name="pre_o_do_alcool">Preço do Alcool</string>
    <string name="pre_o_da_gasolina">Preço da Gasolina</string>
    <string name="_75">75%</string>
    <string name="calcular">Calcular</string>
</resources>